ingress-default.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-default
  labels:
    app: ingress-default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingress-default
  name: ingress-default
  namespace: ingress-default
spec:
  selector:
    matchLabels:
      app: ingress-default
  replicas: 1
  template:
    metadata:
      labels:
        app: ingress-default
      name: ingress-default
    spec:
      containers:
      - name: ingress-default
        image: ingress-default:0.0.1
        # imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 10Mi
          requests:
            cpu: 100m
            memory: 10Mi
        volumeMounts:
          - readOnly: true
            mountPath: html
            name: html-files
      volumes:
        - name: html-files
          configMap:
            name: ingress-default-static-files
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-default
  namespace: ingress-default
  labels:
    app: ingress-default
spec:
  selector:
    app: ingress-default
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  namespace: ingress-default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: ingress-default
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ingress-default
          servicePort: 80
